[build-system]
requires = [
    "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py

[testenv]
passenv = PGPORT
commands =
    black --check .
    flake8 .
    python -m pytest -x -v -W error test
deps =
    pytest
    pytest-mock
    pytest-benchmark
    black
    flake8
    flake8-alphabetize
    pytz
"""
